fix spacing for iphone 6+

--- a/src/stylus/4.modules.hero-nav.styl
+++ b/src/stylus/4.modules.hero-nav.styl
@@ -8,6 +8,8 @@
 	flex-wrap: wrap
 	background: hsla(0, 0%, 97%, 1)
 	$horizontal-divider()
+	+below(460px)
+		justify-content: space-between
 
 	// How the hero section looks at different sizes
 	$hero-section()
